--- a/package.json
+++ b/package.json
@@ -10,28 +10,27 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "next": "^14.2.0",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0",
     "@neondatabase/serverless": "^0.9.0",
     "@prisma/client": "^5.19.0",
-    "prisma": "^5.19.0",
-    "zustand": "^4.5.0",
-    "lucide-react": "^0.400.0",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.400.0",
+    "next": "^14.2.0",
+    "prisma": "^5.19.0",
+    "react": "^18.3.0",
+    "react-dom": "^18.3.0",
+    "react-easy-crop": "^5.5.6",
     "tailwind-merge": "^2.4.0",
-    "react-easy-crop": "^5.0.5"
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
-    "typescript": "^5.5.0",
-    "tailwindcss": "^3.4.0",
-    "postcss": "^8.4.0",
     "autoprefixer": "^10.4.0",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.0"
+    "eslint-config-next": "^14.2.0",
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.5.0"
   }
 }
-
