--- a/env.example
+++ b/env.example
@@ -1,9 +1,11 @@
-DATABASE_URL="postgresql://neondb_owner:npg_o2iTpUByG3Wn@ep-crimson-king-a4292tbj-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require"
+DATABASE_URL="postgresql://postgres.zuxljntziebigbcmduqv:Manciaestattizitto@aws-1-eu-central-1.pooler.supabase.com:5432/postgres?sslmode=require"
 NEXT_PUBLIC_WHATSAPP_NUMBER="+393276976442"
 NEXT_PUBLIC_EMAIL="lafavarotta@gmail.com"
 NEXT_PUBLIC_FACEBOOK_URL="https://www.facebook.com/ristorantelaFavarottaterrasini/?locale=it_IT"
 NEXT_PUBLIC_INSTAGRAM_URL="https://www.instagram.com/la_favarotta_ristorante_terras"
 NEXT_PUBLIC_MAPS_URL="https://maps.app.goo.gl/jbR99NEc53czT4Hj6"
+
+
 
 
 
