--- a/env.example
+++ b/env.example
@@ -1,4 +1,4 @@
-DATABASE_URL="postgresql://postgres.zuxljntziebigbcmduqv:Manciaestattizitto@aws-1-eu-central-1.pooler.supabase.com:5432/postgres?sslmode=require"
+DATABASE_URL="postgresql://postgres.[PROJECT_ID]:[PASSWORD]@aws-1-eu-central-1.pooler.supabase.com:5432/postgres?sslmode=require"
 NEXT_PUBLIC_WHATSAPP_NUMBER="+393276976442"
 NEXT_PUBLIC_EMAIL="lafavarotta@gmail.com"
 NEXT_PUBLIC_FACEBOOK_URL="https://www.facebook.com/ristorantelaFavarottaterrasini/?locale=it_IT"
