Replace all references to La Favarotta with Mancia e statti zitto da SasÃ

--- a/env.example
+++ b/env.example
@@ -1,8 +1,8 @@
 DATABASE_URL="postgresql://postgres.[PROJECT_ID]:[PASSWORD]@aws-1-eu-central-1.pooler.supabase.com:5432/postgres?sslmode=require"
 NEXT_PUBLIC_WHATSAPP_NUMBER="+393276976442"
-NEXT_PUBLIC_EMAIL="lafavarotta@gmail.com"
-NEXT_PUBLIC_FACEBOOK_URL="https://www.facebook.com/ristorantelaFavarottaterrasini/?locale=it_IT"
-NEXT_PUBLIC_INSTAGRAM_URL="https://www.instagram.com/la_favarotta_ristorante_terras"
+NEXT_PUBLIC_EMAIL="Mancia e statti zitto da Sasà@gmail.com"
+NEXT_PUBLIC_FACEBOOK_URL="https://www.facebook.com/ristoranteMancia e statti zitto da Sasàterrasini/?locale=it_IT"
+NEXT_PUBLIC_INSTAGRAM_URL="https://www.instagram.com/Mancia e statti zitto da Sasà_ristorante_terras"
 NEXT_PUBLIC_MAPS_URL="https://maps.app.goo.gl/jbR99NEc53czT4Hj6"
 
 
